--- a/mini-crm/.gitignore
+++ b/mini-crm/.gitignore
@@ -17,8 +17,9 @@
 /public/hot
 /public/storage
 /storage/*.key
-/storage/pail
-/vendor
+/storage/logs/
+storage/framework/
+vendor
 Homestead.json
 Homestead.yaml
 Thumbs.db
