--- a/mini-crm/nixpacks.toml
+++ b/mini-crm/nixpacks.toml
@@ -1,16 +1,21 @@
 [phases.setup]
-nixPkgs = ["php82", "php82Packages.composer"]
+nixPkgs = ["php82", "php82Extensions.pdo", "php82Extensions.pdo_mysql", "php82Extensions.pdo_sqlite", "php82Extensions.mbstring", "php82Extensions.xml", "php82Extensions.curl", "php82Extensions.zip", "php82Extensions.gd", "php82Extensions.bcmath"]
 
 [phases.install]
 cmds = [
-  "composer install --no-dev --optimize-autoloader"
+  "composer install --no-dev --no-interaction --prefer-dist --optimize-autoloader"
 ]
 
 [phases.build]
 cmds = [
+  "php artisan key:generate --force",
   "php artisan config:cache",
-  "php artisan route:cache",
-  "php artisan view:cache"
+  "php artisan route:cache"
+]
+
+[deploy.before]
+cmds = [
+  "php artisan migrate --force"
 ]
 
 [start]
