--- a/mini-crm/nixpacks.toml
+++ b/mini-crm/nixpacks.toml
@@ -1,5 +1,7 @@
 [phases.setup]
 nixPkgs = ["php82", "php82Extensions.pdo", "php82Extensions.pdo_mysql", "php82Extensions.pdo_sqlite", "php82Extensions.mbstring", "php82Extensions.xml", "php82Extensions.curl", "php82Extensions.zip", "php82Extensions.gd", "php82Extensions.bcmath"]
+nixOverlays = []
+nixLibs = []
 
 [phases.install]
 cmds = [
@@ -8,14 +10,15 @@ cmds = [
 
 [phases.build]
 cmds = [
-  "php artisan key:generate --force",
-  "php artisan config:cache",
-  "php artisan route:cache"
+  "php artisan config:clear || true",
+  "php artisan key:generate --force || true"
 ]
 
-[deploy.before]
+[phases.deploy]
 cmds = [
-  "php artisan migrate --force"
+  "php artisan migrate --force || true",
+  "php artisan config:cache || true",
+  "php artisan route:cache || true"
 ]
 
 [start]
