--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,6 @@ storage/logs/*
 !storage/logs/.gitkeep
 bootstrap/cache/*
 !bootstrap/cache/.gitkeep
+
+# Fichier d'apprentissage personnel (caché)
+.apprentissage_laravel_deployment.txt
